Release 17.02.0 (pending)
==========================

- General fixes for LimeSDR-PCIE support
- Add gain control with dB value (for RX only)

Release 17.01.1 (pending)
==========================

- Updated LimeSDR rev1.4 gateware images to version 2.6
- LMS7 API: Fix CGEN clock config in LMS_SetClockFreq()
- Fix debug assertion in FFT viewer wx format string
- LMS7 API: Fix NCO down/upconvert for new chip rev
- Fix NCO tuning sign in SoapyLMS7 for LMS7 silicon rev
- Fixed bug in downloadImageResource() call for windows
- Updated LimeSDR images for USB enumeration problem fix

Release 17.01.0 (2017-01-22)
==========================

- Support filter by serial for ConnectionSTREAM
- Added resource location API and image update API
- configure LML clock phases based on interface freq
- LimeSDR: detect reference clock presence on connect
- Set CMIX setting in calib/tune based on chip version

Release 16.12.1 (2017-01-22)
==========================

- Minor compilation fixes for OSX/clang (narrowing)
- Improve cmake check for novena connection i2c support
- Fix abs() overload for mcu lms7002m calibrations

Release 16.12.0 (2016-12-31)
==========================

This is the first changelog entry for LimeSuite