@@ -1,6 +1,7 @@
 Release 17.02.0 (pending)
 ==========================
 
+- Device handle display and label improvements
 - General fixes for LimeSDR-PCIE support
 - Add gain control with dB value (for RX only)
 
